--- a/daftar-mhs.html
+++ b/daftar-mhs.html
@@ -110,7 +110,7 @@
 										<td><a href="info-mhs-1.html">Muhamad Farikhin</a></td>
 										<td>Teknik Informatika-S1</td>
 										<td>Sistem Informasi Perpustakaan berbasis web dengan XML</td>
-										<td><a href="progress-mahasiswa-1.html">Lihat Progress</a></td>
+										<td><a href="progress-mhs-1.html">Lihat Progress</a></td>
 									</tr>
 									<tr>
 										<td>2</td>
